<resources>
    <string name="app_name">chord.io</string>

    <string name="auth_storage_key">authentication_storage</string>
    <string name="auth_base_url">http://192.168.46.101:8080/auth</string>
    <string name="auth_realm">master</string>
    <string name="auth_client_id">chord.io/</string>
    <string name="auth_client_secret">b4317383–bf15–4928–8683–3772dcdd08a8</string>
    <string name="auth_admin_username">admin/</string>
    <string name="auth_admin_password">chord.io/</string>

    <string name="api_base_url">http://192.168.46.101:5000</string>
    <string name="api_connection_timeout">Network connection has timed out, contact an administrator</string>
    <string name="api_network_error">Network connection cannot be established, contact an administrator</string>
    <string name="api_server_error">Internal server error, contact an administrator</string>

    <string name="preference_file_key">shared_preferences</string>

    <string name="main_activity_title">Home</string>
    <string name="main_activity_menu_profile">Profile</string>

    <string name="sequencer_activity_title">Sequencer</string>

    <string name="editor_activity_title">Editor</string>

    <string name="dialog_positive_button">Got it</string>
    <string name="dialog_negative_button">Cancel</string>

    <string name="cudc_operation_dialog_title">Select an operation</string>
    <string name="cudc_operation_dialog_positive_button">Continue</string>
    <string name="cudc_operation_dialog_negative_button">Cancel</string>
    <string name="cudc_operation_dialog_create">Create</string>
    <string name="cudc_operation_dialog_update">Update</string>
    <string name="cudc_operation_dialog_delete">Delete</string>
    <string name="cudc_operation_dialog_clone">Clone</string>

    <string name="track_type_dialog_title">Select a track type</string>
    <string name="track_type_dialog_positive_button">Continue</string>
    <string name="track_type_dialog_negative_button">Cancel</string>
    <string name="track_type_dialog_midi_track">Midi</string>

    <string name="project_entity_name">Project</string>
    <string name="project_list_header">Projects</string>
    <string name="project_list_item_information">%1$s BPM, %2$s tracks</string>
    <string name="project_dialog_form_name">Name</string>
    <string name="project_dialog_form_author">Author</string>
    <string name="project_dialog_form_tempo">Tempo</string>
    <string name="project_dialog_form_visibility">Visibility</string>

    <string name="track_entity_name">Track</string>
    <string name="track_list_header">Tracks</string>
    <string name="track_list_item_information">channel %1$s</string>
    <string name="track_list_dialog_form_name">Name</string>
    <string name="track_list_dialog_form_channel">Channel</string>
    <string name="track_list_dialog_form_color">Color</string>

    <string name="theme_entity_name">Theme</string>

    <string name="signin_username">Username</string>
    <string name="signin_password">Password</string>
    <string name="signin_remember_me">Remember me</string>
    <string name="signin_forgot_password">Forgot password ?</string>
    <string name="signin_not_a_member_yet">Not a member yet ?</string>
    <string name="signin_signup">Sign up</string>
    <string name="signin_signin">SIGN IN</string>

    <string name="signup_dialog_title">Sign Up</string>
    <string name="signup_username">Username</string>
    <string name="signup_email_address">Email address</string>
    <string name="signup_password">Password</string>

    <string name="section_load_failed">Failed to load, tap to try again.</string>
    <string name="section_empty">Section is empty</string>

    <string name="quanize_mode_ternary">Triplet</string>
    <string name="quanize_mode_ternary_short">T</string>
    <string name="quanize_mode_dotted">Dotted</string>
    <string name="quanize_mode_dotted_short">.</string>
</resources>
